MDEV-34424 Replica server crashes when using PARSEC plugin

Replica server crashes with an invalid pointer when using a user created
with the PARSEC plugin for replication

realloc can't be done for mysql->passwd. There's also no pretty way to
pass the ext-salt into hash_password, so let's use _Thread_local instead.